--- a/anforderungen.tex
+++ b/anforderungen.tex
@@ -67,12 +67,15 @@ Für eine Software die an der Hochschule Landshut für Lehre sowie Forschung im 
 \item \textbf{Anwendung der Algorithmen im dreidimensionalen Raum}\\
 	  Eine Vielzahl an Bildaufnahmen liegen als dreidimensionaler Datensatz vor. Eine Reihe von Bildern muss folglich zusätzlich zur xy-Ebene auch in z-Richtung zu bearbeiten sein.
 
+\item \textbf{Darstellung aller Ebenen der Bilddaten}\\
+	  Ein dreidimensionaler Datensatz macht es möglich, nicht nur die Bilder der xy-Ebene sondern auch die xz- sowie yz-Ebene darzustellen. Es soll möglich sein, in einem Bildsatz einen Punkt auszuwählen und in Darstellungen mit anderer Ebenenansicht der gleichen Daten anzeigen.
+	
 \item \textbf{Modularer Aufbau} \\
 	  Die Software soll auch in den Grundfunktionen erweiterbar sein, die bei Auslieferung des Programms sofort zur Verfügung stehen (Skalierung, Rotation, etc.). Anders als die von Benutzern erstellten Plug-ins, die abhängig vom Anwender sind, muss eine Möglichkeit zur globalen Erweiterung gegeben werden.
 
 \item \textbf{Unterstützung des Dicom-Standards}\\
 	  Medizinische Bilddaten besitzen neben den rohen Pixeldaten noch eine Vielzahl zusätzlicher Information wie Patientendaten oder Seriennummern der Aufnahmen und benötigen eine spezielle Verarbeitung. Anders als übliche Grauwertbilder besitzen DICOM-Daten unter Anderem nicht 255 sondern bis zu $2^{16}$ verschiedene Grauwerte.
-
+	  
 \item \textbf{Implementierung in der Programmiersprache Java}\\
 	  Das Modul zur Bildverarbeitung der Biomedizinischen Technik findet in Java statt. Dadurch wird die Programmiersprache eine Anforderung, da ein Einsatz für die Lehre sonst nur erschwert möglich ist.
 
