--- a/header.tex
+++ b/header.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}
 
 \usepackage{tipa}
+\usepackage{here} 
 
 %\usepackage[T1]{fontenc}
 
@@ -10,10 +11,13 @@
 \usepackage{anysize} %Damit man Raender leicht einstellen kann
 \usepackage{titlesec}
 
+\usepackage{bookmark,hyperref}
+
 \usepackage{tabularx}
 \usepackage{rotating}
 \usepackage{hhline}
 
+%\usepackage{float}
 \usepackage{floatrow}
 %\usepackage[sc,center]{titlesec} %Um Kapitelnamen-Schrift zu veraendern
 %\usepackage[T1]{fontenc} %ueblich
