--- a/literature.bib
+++ b/literature.bib
@@ -66,7 +66,36 @@
        url = "{ftp://medical.nema.org/medical/dicom/2011/11_06pu.pdf}"
    }
  
+ @misc{eclipse:help,
+        author = "{The Eclipse Foundation}",
+        title = "Eclipse documentation - Current Release",
+        year = "2013",
+        url = "{http://help.eclipse.org/kepler/index.jsp}"
+    }
  
+ @misc{vogel:e4overview,
+        author = "Vogel, Lars",
+        title = "Eclipse 4 RCP - Building Eclipse RCP applications based on Eclipse 4",
+        year = "2013",
+        url = "{http://www.vogella.com/tutorials/EclipseRCP/article.html#e4overview_eclipse4}",
+        note = "Stand 23.01.2014",
+    }
+ 
+ @misc{vogel:eclipseoverview,
+         author = "Vogel, Lars",
+         title = "Eclipse IDE Tutorial",
+         year = "2013",
+         url = "{http://www.vogella.com/tutorials/Eclipse/article.html#eclipseoverview}",
+         note = "Stand 23.01.2014",
+     }
+ 
+ @misc{eclipse:swt,
+          author = "{The Eclipse Foundation}",
+          title = "SWT: The Standard Widget Toolkit",
+          year = "2014",
+          url = "{http://www.eclipse.org/swt/}",
+          note = "Stand 23.01.2014",
+      }
  
  @BOOK{radio:hounsfield,
     AUTHOR       = "Bücheler, Egon and Lackner, Klaus-Jürgen and Thelen, Manfred",
@@ -88,3 +117,11 @@
  	PUBLISHER    = "B.G. Teubner Stuttgart Leipzig",
  	YEAR         = "2000",
  }
+ 
+ @BOOK{goll:swa,
+  	AUTHOR       = "Goll, Joachim and Dausmann, Manfred",
+  	TITLE        = "Architektur- und Entwurfsmuster der Softwaretechnik",
+  	PUBLISHER    = "Springer Vieweg",
+  	YEAR         = "2013",
+  }
+  
