--- a/grundlagenMbv.tex
+++ b/grundlagenMbv.tex
@@ -1,7 +1,7 @@
 \chapter{Grundlagen medizinischer Daten- und Bildformate} \label{grundlagen}
 \addthumb{Grundlagen der medizinischen Bildverarbeitung}{\huge{\textbf{\thechapter.}}}{white}{haw_rot}
 
-\section{Bildgewinnung und bildgebende Verfahren}\label{grundlagen:bildgebung}
+%\section{Bildgewinnung und bildgebende Verfahren}\label{grundlagen:bildgebung}
 
 \section{DICOM}\label{grundlagen:dicom}
 Der Name DICOM steht für \textit{Digital Imaging and COmmunication in Medicine}. Der Umgang mit diesem Standard ist essentieller Bestandteil der zu entwickelnden Software. Pianykh\cite{pianykh:dicom} beschreibt im ersten Kapitel, dass DICOM nicht nur aus Pixel und deren zugehörigen Werten besteht. Wie der Name sagt, ist auch die Kommunikation fest im Standard verankert. Damit ist die Übertragung der Daten von medizinischen Geräten(Modalitäten) zum zentralen Speicher und deren Verteilung gemeint. Des weiteren spielt die dauerhafte Speicherung der digitalen Aufnahmen eine große Rolle. Daher wird im gleichen Zug mit DICOM immer ein PACS genannt. Das Akronym PACS bedeutet \textit{Picture Archiving and Communication System} und besteht sowohl aus Hardware (Server, Speicherung) als auch Software(Verteilung und Kommunikation).\\
@@ -10,7 +10,7 @@ Abbildung \ref{communication} illustriert das Zusammenspiel des DICOM-Standards 
 \begin{figure}[htbp]
   \vspace{0.5cm}
   \centering
-  \fbox{\includegraphics[angle=0,width=12cm]{./img/communication_neu.pdf}}
+  \fbox{\includegraphics[angle=0,width=10cm]{./img/communication_neu.pdf}}
   \caption{Kommunikationsprozess von Aufnahme zur Verarbeitung}
   \floatfoot{Vorlage für diese Darstellung ist die Grafik in \cite[Fig. 1]{pianykh:dicom}}
   \label{communication}
@@ -297,3 +297,37 @@ Sowohl die Grauwertdarstellungen, als auch Farbbilder wurden bisher nur als eine
 \section{Bilder mit zeitlicher Abhängigkeit}
 
 Auch Bildaufnahmen zu verschiedenen Zeitpunkten sind dreidimensionale Bildfolgen, wobei die Zeit die dritte Dimension darstellt\cite[2.2.5]{handels:mbv}. Häufige Einsatzgebiete für Bewegtbildfolgen ist die Endoskopie oder Sonographie. Die Abbildung \ref{time3d} macht den Unterschied zwischen zeitlicher und räumlicher Dimension deutlich. Räumliche Darstellungen sind grundsätzlich in mehrere DICOM-Objekte und Dateien aufgeteilt. Zeitlich abhängige Daten sind in einem einzigen Objekt zusammengefasst. NumberOfFrames (0028,0008) gibt die Anzahl an unterschiedlichen Aufnahmen und Zeitpunkten an, die in PixelData enthalten sind.
+
+\chapter{Grundlagen der Entwurfsmuster zur Softwareentwicklung}
+
+Während der Entwicklung von Software stehen Programmierer oft vor ähnlichen Problemstellungen. Entwurfsmuster bieten hierfür verlässliche Lösungsvorschläge\cite{goll:swa}. Muster werden unabhängig vom aktuellen Abschnitt des Entwicklungsprozesses eingesetzt. So gibt es Schablonen, die das Softwaresystem beschreiben, oder Muster, die auf Objektebene eingesetzt werden. Hierbei wird zwischen Architekturmustern und Entwurfsmustern unterschieden. Nach Goll und Dausmann \cite[3.1, 3.2]{goll:swa} ist das Ziel der Entwurfsmuster, Lösungen wiederverwendbar zu gestalten und die Flexibilität der Software zu erhöhen. Muster verbessern unter anderem die beiden Eigenschaften der Verständlichkeit und Erweiterbarkeit. Im Rahmen der Arbeit werden vor Allem objektorientierte Muster folgender Klassen verwendet:
+
+\begin{itemize}
+\item Strukturmuster
+\item Verhaltensmuster
+\item Erzeugungsmuster
+\end{itemize}
+
+Nach dieser ersten Klassifikation kann nochmals zwischen klassenbasierten und objektbasierten Mustern unterschieden werden. Der Unterschied besteht hauptsächlich darin, dass klassenbasierte Muster die Objekttypen während der Übersetzung festlegt. Bei objektbasierten Mustern können Objekte den  Typ dynamisch zur Laufzeit ändern\cite[4.1]{goll:swa}.
+
+\section{Strukturmuster}
+Strukturmuster bestimmen die Zusammensetzung der Klassen oder Objekte. Während dieser Abschlussarbeit wird im Speziellen auf das Muster \textit{Adapter} eingegangen. Der Adapter dient dazu, zwei inkompatible Schnittstellen einander anzupassen. Zum Import der DICOM-Objekte wird eine externe Bibliothek benötigt. Der Adapter hilft dabei, eine allgemeine Schnittstelle zwischen Bibliothek und Software zur Verfügung zu stellen, damit keine festen Abhängigkeiten entstehen.
+
+\subsection{Adapter}
+
+\section{Verhaltensmuster}
+Die Interaktion zwischen Objekten kann mit Verhaltensmustern festgelegt werden. Die Anforderung zur Darstellungen verschiedener Ebenen erfordert eine Möglichkeit zur Kommunikation unter den Anzeigeflächen der DICOM-Objekte. Hier kommt das Beobachtermuster zum Einsatz, um Veränderungen eines Objekts an andere Objekte zu melden.
+
+\subsection{Observer}
+
+\subsection{Schablone}
+
+\section{Erzeugungsmuster}
+Erzeugungsmuster übernehmen die Erstellung der Objekte zur Laufzeit. Wie beschrieben haben DICOM-Bilddaten eine Grauwerttiefe zwischen 8- und 16-Bit. Daher kann erst zur Laufzeit entschieden werden, welchen Bildobjekt angelegt werden kann. Ein einfaches Fabrikmuster übernimmt diese Aufgabe.
+
+\subsection{Die einfache Fabrik}
+Dieses Entwurfsmuster kommt
+
+\subsection{Abstrakte Fabrik}
+
+\subsection{Das Architekturmuster Plug-in}
